# doc-processing-platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  locustfile.py  prometheus.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1609ce4e1378_create_tenants_and_documents_tables.py  167c63ccb1b5_add_file_path_to_documents.py  ffd73e16aee7_add_document_chunks_table_with_pgvector.py
app/: main.py
app/api/v1/: ask.py  auth.py  documents.py  router.py
app/core/: cache.py  circuit_breaker.py  config.py  dependencies.py  logging.py  middleware.py  rate_limit.py  redis.py  security.py
app/db/: session.py
app/models/: __init__.py  chunk.py  document.py  tenant.py
app/schemas/: ask.py  auth.py  document.py  tenant.py
app/services/: agents.py  ai.py  kafka_producer.py
app/workers/: celery_app.py  kafka_consumer.py  tasks.py
k8s/: api-deployment.yaml  migrate-job.yaml  service.yaml  worker-deployment.yaml
terraform/: ecr.tf  eks.tf  elasticache.tf  main.tf  outputs.tf  rds.tf  s3.tf  variables.tf  vpc.tf
tests/: conftest.py  test_auth.py  test_documents.py
