[project]
name = "doc-processing-platform"
version = "0.1.0"
description = "AI-powered multi-tenant document processing platform"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt<5.0",
    "celery>=5.6.3",
    "fastapi>=0.138.0",
    "kafka-python-ng>=2.2.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
