[project]
name = "doc-processing-platform"
version = "0.1.0"
description = "AI-powered multi-tenant document processing platform"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt<5.0",
    "celery>=5.6.3",
    "fastapi>=0.138.0",
    "kafka-python-ng>=2.2.3",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "openai>=2.44.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "pybreaker>=1.4.1",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
]
