[project]
name = "doc-processing-platform"
version = "0.1.0"
description = "AI-powered multi-tenant document processing platform"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt<5.0",
    "celery>=5.6.3",
    "crewai>=1.6.1",
    "fastapi>=0.138.0",
    "kafka-python-ng>=2.2.3",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "openai>=2.44.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "pybreaker>=1.4.1",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "locust>=2.45.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
